# Vitrine

./: .env.example  .gitignore  BOUNDARIES.md  CLAUDE_CONTAINER.md  CMakeLists.txt  Dockerfile.consolidated  GAUSSIAN_TOOLKIT_README.md  README.md  docker-compose.consolidated.yml  exhibit.example.toml  pins.lock.toml  pins.resolved.toml  prompt.md
.github/workflows/: ubuntu.yml
docker/: Dockerfile.come  Dockerfile.gw  Dockerfile.milo  comfyui-extra-model-paths.yaml  install_come.sh  install_gaussianwrapping.sh  supervisord.conf
docs/: README.md  architecture.md  engineering-log.md  onboarding.md
docs/architecture/: overview.md  v3-pipeline.md
docs/brief/: ai-cop-bid-v3.md  ai-cop-funding-pitch-2026.md
docs/docs/: index.md
docs/plugins/: api-reference.md
docs/workflows/: mesh-backends.md
eval/: benchmark_mipnerf360.sh
onboarding/: Cargo.toml  README.md
onboarding/src/: main.rs
onboarding/static/: app.js  index.html  style.css
report/: .gitignore  main_v2.tex  main_v3.tex  main_v4.tex  references.bib
report/chapters/: ch11_module_processing.tex  ch15_cloud_processing.tex  ch1_introduction.aux  ch1_introduction.tex  ch2_background.aux  ch2_background.tex  ch3_technology.aux  ch3_technology.tex  (+19 more)
research/: README.md
scripts/: gsplat_depth_test.py  hardware_trace.py  resolve_pins.sh  run_comfyui.sh  run_gallery_pipeline.py  run_object_separation.py  sync_upstream.sh  test_gsplat_mesh.py
secrets/: rclone.conf.example
tests/: CMakeLists.txt  test_nurec_usdz_format.cpp  test_scene_validity.cpp  test_usd_format.cpp  test_vram_profiler_metrics.cpp
(+267 files in other folders)
