[package]
name = "vitrine-onboarding"
version = "0.1.0"
edition = "2021"
description = "Vitrine Onboarding web wizard: authors an ADR-013 exhibit.toml manifest with server-side secret containment (ADR-015)."
license = "Apache-2.0"

[[bin]]
name = "vitrine-onboarding"
path = "src/main.rs"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
